--- a/app/views/registrations/signup.erb
+++ b/app/views/registrations/signup.erb
@@ -1,5 +1,6 @@
 <h1>Sign Up Below:</h1>
 
 <form action="/registrations" method="post">
+  <p>Name: <input type="text" name="" value="name"></p>
 
 </form>
