automatically backed up by learn

--- a/app/views/registrations/signup.erb
+++ b/app/views/registrations/signup.erb
@@ -2,6 +2,7 @@
 
 <form action="/registrations" method="post">
   <p>Name: <input type="text" name="name" value="name"></p>
-    <p>Email: <input type="text" name="name" value="name"></p>
+  <p>Email: <input type="text" name="email" value="email"></p>
+  <p>Password: <input type="text" name="name" value="name"></p>
 
 </form>
