--- a/app/views/registrations/signup.erb
+++ b/app/views/registrations/signup.erb
@@ -3,6 +3,6 @@
 <form action="/registrations" method="post">
   <p>Name: <input type="text" name="name" value="name"></p>
   <p>Email: <input type="text" name="email" value="email"></p>
-  <p>Password: <input type="text" name="name" value="name"></p>
-
+  <p>Password: <input type="text" name="password" value="password"></p>
+   <input type="submit" name="" value="submit">
 </form>
