automatically backed up by learn

--- a/app/views/registrations/signup.erb
+++ b/app/views/registrations/signup.erb
@@ -4,5 +4,5 @@
   <p>Name: <input type="text" name="name" value="name"></p>
   <p>Email: <input type="text" name="email" value="email"></p>
   <p>Password: <input type="text" name="password" value="password"></p>
-   <input type="submit" name="" value="submit">
+   <input type="submit" value="submit">
 </form>
